Added alerts to notify user

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,6 @@
     <head>
         <title>login page</title>
         <link rel="stylesheet" href="index.css">
-        <script src="index.js"></script>
     </head>
     <body>
         <div class=holder>
@@ -12,10 +11,11 @@
                 <input id="password" placeholder="Password"/>
             </div>
             <div class=buttons>
-                <button id=login class=login onclick="login()">Login</button>
+                <button id=login class=login>Login</button>
                 <button class=signup onclick="signup()">Sign up</button>
             </div>
         </div>
+        <script src="index.js"></script>
     </body>
 </html>
 
